// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`serialize with a 1:1 relationship with a local id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "company": {
        "data": {
          "lid": "666",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "lid": "666",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:1 relationship with a normal id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "company": {
        "data": {
          "id": "666",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:1 relationship with a polymorphic relationship serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "organization": {
        "data": {
          "id": "666",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:1 relationship with includes with a local id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "1234",
    "relationships": {
      "company": {
        "data": {
          "lid": "612",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "lid": "612",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:1 relationship with includes with a normal id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "1234",
    "relationships": {
      "company": {
        "data": {
          "id": "612",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "612",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship when no relationship identifier is found™ ignores the faulty relationship and serializes the valid one 1`] = `
{
  "data": {
    "id": "123",
    "relationships": {
      "companies": {
        "data": [
          {
            "id": "666",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with a local id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "companies": {
        "data": [
          {
            "lid": "666",
            "type": "companies",
          },
          {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "lid": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "name": "Compeon 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with a normal id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "companies": {
        "data": [
          {
            "id": "666",
            "type": "companies",
          },
          {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "name": "Compeon 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with a polymorphic relationship serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "colleagues": {
        "data": [
          {
            "id": "777",
            "type": "users",
          },
          {
            "id": "333",
            "type": "users",
          },
        ],
      },
      "organizations": {
        "data": [
          {
            "id": "666",
            "type": "companies",
          },
          {
            "id": "667",
            "type": "multiplier-organizations",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "name": "Compeon 4.0 GmbH",
      },
      "id": "667",
      "type": "multiplier-organizations",
    },
    {
      "attributes": {
        "name": "Arno Admin",
      },
      "id": "777",
      "type": "users",
    },
    {
      "attributes": {
        "name": "Ben Utzer",
      },
      "id": "333",
      "type": "users",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with includes with a local id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "companies": {
        "data": [
          {
            "lid": "666",
            "type": "companies",
          },
          {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "lid": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "name": "Compeon 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with includes with a normal id serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "companies": {
        "data": [
          {
            "id": "666",
            "type": "companies",
          },
          {
            "id": "667",
            "type": "companies",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "name": "Compeon 4.0 GmbH",
      },
      "id": "667",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with includes with deeply nested relationships serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "relationships": {
      "company": {
        "data": {
          "id": "12",
          "type": "companies",
        },
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "date": "19.03.2017",
      },
      "id": "95123",
      "type": "versions",
    },
    {
      "attributes": {
        "name": "Tag 1",
      },
      "id": "66",
      "relationships": {
        "version": {
          "data": {
            "id": "95123",
            "type": "versions",
          },
        },
      },
      "type": "tags",
    },
    {
      "attributes": {
        "name": "New sideposted tag",
      },
      "lid": "777",
      "type": "tags",
    },
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "12",
      "relationships": {
        "tags": {
          "data": [
            {
              "id": "66",
              "type": "tags",
            },
            {
              "lid": "777",
              "type": "tags",
            },
          ],
        },
      },
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with a 1:n relationship with includes with duplicate includes serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "511",
    "relationships": {
      "company": {
        "data": {
          "id": "666",
          "type": "companies",
        },
      },
      "employees": {
        "data": [
          {
            "id": "152",
            "type": "users",
          },
        ],
      },
    },
    "type": "users",
  },
  "included": [
    {
      "attributes": {
        "name": "Compeon GmbH",
      },
      "id": "666",
      "type": "companies",
    },
    {
      "attributes": {
        "firstName": "Arno",
        "lastName": "Apitester",
      },
      "id": "152",
      "relationships": {
        "company": {
          "data": {
            "id": "666",
            "type": "companies",
          },
        },
      },
      "type": "users",
    },
  ],
}
`;

exports[`serialize with simple attributes with a primitive data type serializes an empty resource 1`] = `
{
  "data": {
    "type": "users",
  },
}
`;

exports[`serialize with simple attributes with an array of resources and attributes serializes the data 1`] = `
{
  "data": [
    {
      "attributes": {
        "firstName": "Nico",
        "lastName": "Peters",
      },
      "id": "123",
      "type": "user",
    },
    {
      "attributes": {
        "firstName": "Frank",
        "lastName": "Wüller",
      },
      "id": "134",
      "relationships": {
        "company": {
          "data": {
            "id": "66",
            "type": "companies",
          },
        },
      },
      "type": "user",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "Compeon",
      },
      "id": "66",
      "type": "companies",
    },
  ],
}
`;

exports[`serialize with simple attributes with empty attributes list serializes no attributes 1`] = `
{
  "data": {
    "id": "123",
    "type": "users",
  },
}
`;

exports[`serialize with simple attributes with valid data serializes the data 1`] = `
{
  "data": {
    "attributes": {
      "email": "nico.peters@example.com",
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "123",
    "type": "users",
  },
}
`;

exports[`serialize with simple attributes with whitelisted attributes only serializes specified attributes 1`] = `
{
  "data": {
    "attributes": {
      "firstName": "Nico",
      "lastName": "Peters",
    },
    "id": "123",
    "type": "users",
  },
}
`;
